2.0.1.1 update
Texture/model updates:
-Coin Mint
-Vending Machine (Normal Size)
Custom villager trade config.
Various QoL updates and optimizations.